--- a/discode-web/src/app/app.component.html
+++ b/discode-web/src/app/app.component.html
@@ -1,2 +1,7 @@
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="min-vh-100 min-vw-100 flex-column bg-discode-dark">
+    <app-header></app-header>
+    <div class="d-flex align-items-center justify-content-center p-5 mt-5">
+        <router-outlet></router-outlet>
+    </div>
+    <app-footer></app-footer>
+</div>
