--- a/discode-web/src/app/authentication/login/login.component.html
+++ b/discode-web/src/app/authentication/login/login.component.html
@@ -1,1 +1,21 @@
-<h2>Login</h2>
+<form>
+  <!-- Email input -->
+  <div class="form-outline mb-4  border-bottom border-primary">
+    <input type="email" id="form2Example1" class="form-control" />
+    <label class="form-label" for="form2Example1">Email address</label>
+  </div>
+
+  <!-- Password input -->
+  <div class="form-outline mb-4  border-bottom border-primary">
+    <input type="password" id="form2Example2" class="form-control" />
+    <label class="form-label" for="form2Example2">Password</label>
+  </div>
+
+  <!-- Submit button -->
+  <button type="submit" class="btn btn-primary btn-block mb-4">Log in</button>
+
+  <!-- Register buttons -->
+  <div class="text-center ">
+    <p>Don't have an account? <a href="/auth/register">Register</a></p>
+  </div>
+</form>
