--- a/discode-web/src/app/shared/components/footer/footer.component.html
+++ b/discode-web/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,7 @@
-<footer>
-  <p>&copy; Discode </p>
+<footer class="text-center text-white bg-discode-darkest">
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    Copyright © 2021 Discode
+  </div>
+  <!-- Copyright -->
 </footer>
