Add auth page and some custom SCSS classes

--- a/discode-web/src/app/authentication/login/login.component.html
+++ b/discode-web/src/app/authentication/login/login.component.html
@@ -1,4 +1,4 @@
-<form>
+<form class="form-discode-blue">
   <!-- Email input -->
   <div class="form-outline mb-4  border-bottom border-primary">
     <input type="email" id="form2Example1" class="form-control" />
