--- a/discode-web/src/app/shared/components/footer/footer.component.html
+++ b/discode-web/src/app/shared/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="text-center text-white bg-discode-darkest">
   <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+  <div class="text-center p-3 fg-discode-blue">
     Copyright © 2021 Discode
   </div>
   <!-- Copyright -->
