--- a/discode-web/src/app/shared/components/header/header.component.html
+++ b/discode-web/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-discode-darkest">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Discode</a>
+        <a class="navbar-brand fg-discode-blue" href="#">Discode</a>
         <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
