--- a/discode-web/src/app/authentication/register/register.component.html
+++ b/discode-web/src/app/authentication/register/register.component.html
@@ -1,4 +1,4 @@
-<form>
+<form class="form-discode-blue">
     <!-- 2 column grid layout with text inputs for the first and last names -->
     <div class="row mb-4">
         <div class="col">
