Change headers and some colors

--- a/discode-web/src/app/authentication/authentication.component.html
+++ b/discode-web/src/app/authentication/authentication.component.html
@@ -3,10 +3,10 @@
       <h5 class="card-title fg-discode-blue">Welcome to Discode</h5>
       <h6 class="card-subtitle mb-2 text-muted">It's like Discord, but with code.</h6>
       <p class="card-text">
-       Discode &trade; is an online chatting platform that allows interactive code execution in the form
-       of integrated snippets that can be sent directly in the chat.
+       <code class="fw-bold fs-5">Discode</code> is an online chatting platform that allows messaging integrated code snippets and
+       executing them on demand. It supports many languages like C++, Python and GachiScript.
       </p>
-      <a href="./auth/register" class="card-link">Register</a>
-      <a href="./auth/login" class="card-link">Log in</a>
+      <button type="button" routerLink="./register" class="btn btn-primary m-2 btn-discode-green">Register</button>
+      <button type="button" routerLink="./login" class="btn btn-primary m-2 btn-discode-green">Log in</button>
     </div>
   </div>
