--- a/discode-web/src/app/shared/components/footer/footer.component.html
+++ b/discode-web/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,5 @@
-<footer class="text-center text-white bg-discode-darkest">
-  <!-- Copyright -->
-  <div class="text-center p-3 fg-discode-blue">
+<footer class="text-center text-white bg-discode-darkest fg-discode-light">
+  <div class="text-center p-2">
     Copyright © 2021 Discode
   </div>
-  <!-- Copyright -->
 </footer>
