--- a/discode-web/src/app/shared/components/header/header.component.html
+++ b/discode-web/src/app/shared/components/header/header.component.html
@@ -1,9 +1,5 @@
-<nav class="navbar navbar-expand-lg bg-discode-darkest">
-    <div class="container-fluid">
-        <a class="navbar-brand fg-discode-blue" href="#">Discode</a>
-        <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i>
-        </button>
-    </div>
+<nav class="bg-discode-darkest">
+    <a href="/">
+        <img class="ms-4 m-2" src="assets/logo-dark.png" style="max-width: 200px" alt="" loading="lazy" />
+    </a>
 </nav>
