--- a/discode-web/src/app/authentication/authentication.component.html
+++ b/discode-web/src/app/authentication/authentication.component.html
@@ -1,12 +1,19 @@
-<div class="card" style="width: 30rem;">
+<div class="d-flex align-items-center justify-content-center p-5 mt-5">
+
+  <div class="card" style="width: 30rem;">
     <div class="card-body bg-discode-darkest">
       <h5 class="card-title fg-discode-blue">Welcome to Discode</h5>
       <h6 class="card-subtitle mb-2 text-muted">It's like Discord, but with code.</h6>
       <p class="card-text">
-       <code class="fw-bold fs-5">Discode</code> is an online chatting platform that allows messaging integrated code snippets and
-       executing them on demand. It supports many languages like C++, Python and GachiScript.
+        <code class="fw-bold fs-5">Discode</code> is an online chatting platform that allows messaging integrated code
+        snippets and
+        executing them on demand. It supports many languages like C++, Python.
       </p>
       <button type="button" routerLink="./register" class="btn btn-primary m-2 btn-discode-green">Register</button>
       <button type="button" routerLink="./login" class="btn btn-primary m-2 btn-discode-green">Log in</button>
     </div>
   </div>
+  
+  <router-outlet></router-outlet>
+
+</div>
