Fix some layouts

--- a/discode-web/src/app/authentication/authentication.component.html
+++ b/discode-web/src/app/authentication/authentication.component.html
@@ -13,7 +13,6 @@
       <button type="button" routerLink="./login" class="btn btn-primary m-2 btn-discode-green">Log in</button>
     </div>
   </div>
-  
-  <router-outlet></router-outlet>
-
+  <router-outlet class="m-5"></router-outlet>
+  <div style="min-height: 50px"></div>
 </div>
