--- a/discode-web/src/app/shared/components/header/header.component.html
+++ b/discode-web/src/app/shared/components/header/header.component.html
@@ -1,5 +1,10 @@
-<nav class="bg-discode-darkest">
-    <a href="/">
-        <img class="ms-4 m-2" src="assets/logo-dark.png" style="max-width: 200px" alt="" loading="lazy" />
-    </a>
-</nav>
+<div class="d-flex">
+    <nav class="bg-discode-darkest">
+        <a href="/">
+            <img class="ms-2 m-2" src="assets/logo-dark.png" style="max-width: 140px" alt="" loading="lazy" />
+        </a>
+    </nav>
+    <div class="big">
+        
+    </div>
+</div>
