--- a/discode-web/src/app/authentication/login/login.component.html
+++ b/discode-web/src/app/authentication/login/login.component.html
@@ -1,14 +1,14 @@
 <form class="form-discode-blue">
   <!-- Email input -->
   <div class="form-outline mb-4  border-bottom border-primary">
-    <input type="email" id="form2Example1" class="form-control" />
-    <label class="form-label" for="form2Example1">Email address</label>
+    <input type="email" id="loginUsername" class="form-control" />
+    <label class="form-label" for="loginUsername">Username</label>
   </div>
 
   <!-- Password input -->
   <div class="form-outline mb-4  border-bottom border-primary">
-    <input type="password" id="form2Example2" class="form-control" />
-    <label class="form-label" for="form2Example2">Password</label>
+    <input type="password" id="loginPassword" class="form-control" />
+    <label class="form-label" for="loginPassword">Password</label>
   </div>
 
   <!-- Submit button -->
