--- a/discode-web/src/app/authentication/register/register.component.html
+++ b/discode-web/src/app/authentication/register/register.component.html
@@ -15,6 +15,12 @@
         </div>
     </div>
 
+    <!-- Username input -->
+    <div class="form-outline mb-4  border-bottom border-primary">
+        <input type="email" id="registerUsername" class="form-control" />
+        <label class="form-label" for="registerUsername">Username</label>
+    </div>
+
     <!-- Email input -->
     <div class="form-outline mb-4  border-bottom border-primary">
         <input type="email" id="registerEmail" class="form-control" />
@@ -30,7 +36,7 @@
     <!-- Confirm Password input -->
     <div class="form-outline mb-4  border-bottom border-primary">
         <input type="password" id="registerConfirmPassword" class="form-control" />
-        <label class="form-label" for="registerConfirmPassword">Confirm Password</label>
+        <label class="form-label" for="registerConfirmPassword">Confirm password</label>
     </div>
 
     <!-- Submit button -->
