Update all auth forms

--- a/discode-web/src/app/authentication/register/register.component.html
+++ b/discode-web/src/app/authentication/register/register.component.html
@@ -1,42 +1,42 @@
 <form class="form-discode-blue">
-    <!-- 2 column grid layout with text inputs for the first and last names -->
-    <div class="row mb-4">
+     <!-- 2 column grid layout with text inputs for the first and last names -->
+     <div class="row mb-4">
         <div class="col">
-            <div class="form-outline border-bottom border-primary">
-                <input type="text" id="registerFirstName" class="form-control" />
-                <label class="form-label" for="registerFirstName">First name</label>
+            <div class="border-primary">
+                <label class="form-label" for="updateFirstName">First name</label>
+                <input type="text" id="updateFirstName" class="form-control" placeholder="First name" aria-label="First name"/>
             </div>
         </div>
         <div class="col">
-            <div class="form-outline  border-bottom border-primary">
-                <input type="text" id="registerLastName" class="form-control" />
-                <label class="form-label" for="registerLastName">Last name</label>
+            <div class="border-primary">
+                <label class="form-label" for="updateLastName">Last name</label>
+                <input type="text" id="updateLastName" class="form-control" placeholder="Last name" aria-label="Last name"/>
             </div>
         </div>
     </div>
 
     <!-- Username input -->
-    <div class="form-outline mb-4  border-bottom border-primary">
-        <input type="email" id="registerUsername" class="form-control" />
+    <div class="mb-4 border-primary">
         <label class="form-label" for="registerUsername">Username</label>
+        <input type="email" id="registerUsername" placeholder="Username" class="form-control" />
     </div>
 
     <!-- Email input -->
-    <div class="form-outline mb-4  border-bottom border-primary">
-        <input type="email" id="registerEmail" class="form-control" />
+    <div class="mb-4 border-primary">
         <label class="form-label" for="registerEmail">Email address</label>
+        <input type="email" id="registerEmail" placeholder="Email" class="form-control" />
     </div>
 
     <!-- Password input -->
-    <div class="form-outline mb-4  border-bottom border-primary">
-        <input type="password" id="registerPassword" class="form-control" />
+    <div class="mb-4 border-primary">
         <label class="form-label" for="registerPassword">Password</label>
+        <input type="password" id="registerPassword" placeholder="Password" class="form-control" />
     </div>
 
     <!-- Confirm Password input -->
-    <div class="form-outline mb-4  border-bottom border-primary">
-        <input type="password" id="registerConfirmPassword" class="form-control" />
+    <div class="mb-4 border-primary">
         <label class="form-label" for="registerConfirmPassword">Confirm password</label>
+        <input type="password" id="registerConfirmPassword" placeholder="Password" class="form-control" />
     </div>
 
     <!-- Submit button -->
