--- a/discode-web/src/app/profile/profile.component.html
+++ b/discode-web/src/app/profile/profile.component.html
@@ -19,19 +19,19 @@
         <!-- Email input -->
         <div class="mb-4 border-primary">
             <label class="form-label" for="updateEmail">New email address</label>
-            <input type="email" id="updateEmail" class="form-control" />
+            <input type="email" id="updateEmail" placeholder="Email" class="form-control" />
         </div>
 
         <!-- Password input -->
         <div class="mb-4 border-primary">
             <label class="form-label" for="updatePassword">New password</label>
-            <input type="password" id="updatePassword" class="form-control" />
+            <input type="password" id="updatePassword" placeholder="Password" class="form-control" />
         </div>
 
         <!-- Confirm Password input -->
         <div class="mb-4 border-primary">
             <label class="form-label" for="updateConfirmPassword">Confirm password</label>
-            <input type="password" id="updateConfirmPassword" class="form-control" />
+            <input type="password" id="updateConfirmPassword" placeholder="Password" class="form-control" />
         </div>
 
         <!-- Submit button -->
