--- a/discode-web/src/app/authentication/login/login.component.html
+++ b/discode-web/src/app/authentication/login/login.component.html
@@ -1,16 +1,15 @@
 <form class="form-discode-blue">
-  <!-- Email input -->
-  <div class="form-outline mb-4  border-bottom border-primary">
-    <input type="email" id="loginUsername" class="form-control" />
+  <!-- Username input -->
+  <div class="mb-4 border-primary">
     <label class="form-label" for="loginUsername">Username</label>
+    <input type="email" id="loginUsername" placeholder="Username" class="form-control" />
   </div>
 
   <!-- Password input -->
-  <div class="form-outline mb-4  border-bottom border-primary">
-    <input type="password" id="loginPassword" class="form-control" />
+  <div class="mb-4 border-primary">
     <label class="form-label" for="loginPassword">Password</label>
+    <input type="email" id="loginPassword" placeholder="Password" class="form-control" />
   </div>
-
   <!-- Submit button -->
   <button type="submit" class="btn btn-primary btn-block mb-4">Log in</button>
 
