Center those buttons on auth page

--- a/discode-web/src/app/authentication/authentication.component.html
+++ b/discode-web/src/app/authentication/authentication.component.html
@@ -9,8 +9,11 @@
         snippets and
         executing them on demand. It supports many languages like C++, Python and Rust.
       </p>
-      <button type="button" routerLink="./register" class="btn btn-primary m-2 btn-discode-green">Register</button>
-      <button type="button" routerLink="./login" class="btn btn-primary m-2 btn-discode-green">Log in</button>
+      <div class="text-center">
+        <button type="button" routerLink="./login" class="btn btn-primary m-2 me-5 w-25 btn-discode-green">Log in</button>
+        <button type="button" routerLink="./register" class="btn btn-primary m-2  w-25 btn-discode-green">Register</button>
+      </div>
+
     </div>
   </div>
   <router-outlet class="m-5"></router-outlet>
