--- a/discode-web/src/app/authentication/register/register.component.html
+++ b/discode-web/src/app/authentication/register/register.component.html
@@ -1,44 +1,67 @@
-<form class="form-discode-blue" [formGroup]="formGroup">
-     <!-- 2 column grid layout with text inputs for the first and last names -->
-     <div class="row mb-4">
+<form class="form-discode-blue needs-validation" [formGroup]="formGroup" novalidate>
+    <!-- 2 column grid layout with text inputs for the first and last names -->
+    <div class="row mb-4">
         <div class="col">
             <div class="border-primary">
                 <label class="form-label" for="firstName">First name</label>
-                <input type="text" id="updateFirstName" class="form-control" placeholder="First name" aria-label="First name" formControlName="firstName"/>
+                <input type="text" id="updateFirstName" class="form-control" placeholder="First name"
+                    aria-label="First name" formControlName="firstName" required ngFocus="true"/>
+                <div class="text-danger" *ngIf="isInvalid(formGroup.get('firstName')!)">
+                    <small>Please choose a valid name.</small> 
+                </div>
             </div>
         </div>
         <div class="col">
             <div class="border-primary">
                 <label class="form-label" for="updateLastName">Last name</label>
-                <input type="text" id="updateLastName" class="form-control" placeholder="Last name" aria-label="Last name" formControlName="lastName"/>
+                <input type="text" id="updateLastName" class="form-control" placeholder="Last name"
+                    aria-label="Last name" formControlName="lastName" required />
+                <div class="text-danger" *ngIf="isInvalid(formGroup.get('lastName')!)">
+                    <small>Please choose a valid name.</small> 
+                </div>
             </div>
         </div>
     </div>
-
     <!-- Username input -->
     <div class="mb-4 border-primary">
         <label class="form-label" for="registerUsername">Username</label>
-        <input type="email" id="registerUsername" placeholder="Username" class="form-control" formControlName="username" />
+        <input type="text" id="registerUsername" placeholder="Username" class="form-control" formControlName="username"
+            required />
+        <div class="text-danger" *ngIf="isInvalid(formGroup.get('username')!)">
+            <small>Please choose a valid username.</small> 
+        </div>
     </div>
 
     <!-- Email input -->
     <div class="mb-4 border-primary">
         <label class="form-label" for="registerEmail">Email address</label>
-        <input type="email" id="registerEmail" placeholder="Email" class="form-control" formControlName="email" />
+        <input type="email" id="registerEmail" placeholder="Email" class="form-control" formControlName="email"
+            required />
+        <div class="text-danger" *ngIf="isInvalid(formGroup.get('email')!)">
+            <small>Please choose a valid email.</small> 
+        </div>
     </div>
 
     <!-- Password input -->
     <div class="mb-4 border-primary">
         <label class="form-label" for="registerPassword">Password</label>
-        <input type="password" id="registerPassword" placeholder="Password" class="form-control" formControlName="password"/>
+        <input type="password" id="registerPassword" placeholder="Password" class="form-control"
+            formControlName="password" required />
+        <div class="text-danger" *ngIf="isInvalid(formGroup.get('password')!)">
+            <small>Password must be at least 8 characters.</small> 
+        </div>
     </div>
 
     <!-- Confirm Password input -->
     <div class="mb-4 border-primary">
         <label class="form-label" for="registerConfirmPassword">Confirm password</label>
-        <input type="password" id="registerConfirmPassword" placeholder="Password" class="form-control" />
+        <input type="password" id="registerConfirmPassword" placeholder="Password" class="form-control" formControlName="confirmPassword" required />
+        <div class="text-danger" *ngIf="formGroup.hasError('notSame')">
+            <small>Passwords do not match.</small> 
+        </div>
     </div>
 
     <!-- Submit button -->
-    <button type="submit" class="btn btn-primary btn-block mb-4" (click)="register()">Register</button>
+    <button type="submit" class="btn btn-primary btn-block mb-4" [disabled]="this.formGroup.invalid" (click)="register() ">Register</button>
 </form>
+<div id="errors"></div>
