--- a/discode-web/src/app/shared/components/header/header.component.html
+++ b/discode-web/src/app/shared/components/header/header.component.html
@@ -22,8 +22,7 @@
         </button>
         </a>
 
-        <a  href="/auth" >
-            <button type="button" class="m-2 btn btn-primary  btn-floating btn-discode-green">
+            <button type="button" class="m-2 btn btn-primary  btn-floating btn-discode-green" (click)="logout()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-box-arrow-right" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
@@ -32,7 +31,6 @@
                         d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
                 </svg>
             </button>
-        </a>
         
     </span>
 </nav>
