--- a/discode-web/src/app/home/home.component.html
+++ b/discode-web/src/app/home/home.component.html
@@ -1,1 +1,25 @@
-<h3>Home page</h3>
+<div class="row">
+    <div class="col">
+        <div class="side-nav">
+            <div>
+                <button type="button" class=" btn btn-primary btn-discode-green create-chat">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                        viewBox="0 0 16 16">
+                        <path
+                            d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+                    </svg>
+                </button>
+                <label style="text-align: center; padding: 20px; font-size: 16px;">Create new chat</label>
+            </div>
+            <div class="chats btn-group-vertical" data-bs-spy="scroll">
+                <button type="button" class="btn btn-primary btn-discode-green chat" *ngFor="let chat of chatList">{{chat.chatName}}</button>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="col">
+        <app-chat-room></app-chat-room>
+    </div>
+
+</div>
